--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ ul
     padding: 0px;
 }
 
+
 /***************************************************** Régles Globales Fin ***********************************************/
 
 /***************************************************** Barre de Navigation ***********************************************/
@@ -196,27 +197,28 @@ h2
 #menuDescription
 {
     width:100%;
-    background-color: white;
+    background-color: grey;
 }
 
 #niveauUn
 {
+    background-color: aqua;
     display: flex;
     justify-content: space-around;
     position: relative;
-    padding: 0px;
+    font-size: 20px;
+    color: Black;
 }
 
-#menuDescription>ul>li
+#niveauUn>li
 {
-    flex-flow:row;
+    display: flex;
+    height: 67px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    flex: 1;
 }
-
-/*#menuDescription > ul > li
-{
-    float: left; 
-    position: relative;
-}*/
 
 .niveauDeux
 {
@@ -228,25 +230,10 @@ h2
     display: flex;
     justify-content: space-around;
     position: absolute;
-    flex-wrap: wrap;
     width: 100%;
     top: 100%;
     left: 0px;
     z-index: 100000;
-}
-
-#menuDescription a
-{
-    display: flex;
-    justify-content: space-around;
-    text-decoration: none;
-}
-
-#menuDescription> ul > li > a
-{
-    color:black;
-    font-size: 20px;
-    padding: 22px;
 }
 
 .niveauDeux li
@@ -256,14 +243,10 @@ h2
     justify-content: space-around;
     width: 100%;
     border-bottom:  1px solid #CCC;
-}
-
-.niveauDeux li a
-{
     padding: 15px 30px;
     font-size: 16px;
-    width: 100%;
 }
+
 
 #description article
 {
@@ -319,5 +302,79 @@ h2
 {
     color:red;   
 }
+
+.slide
+{
+    background-color: grey;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#sectionNous h1
+{
+    text-align: center;
+    color: aqua;
+}
+
+.corps a
+{
+    color: aqua
+}
+.corps
+{
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    display: flex;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+.corps img
+{
+    height: auto;
+    width: 50%;
+    max-width: 500px;
+    margin-left: 10px;
+    padding: 20px;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: auto;
+    
+}
+
+.biographie
+{
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+#sectionNous table
+{
+    
+    border-radius: 20px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+
+#sectionNous th, td
+{
+    background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    padding: 10px;
+}
+
+#sectionNous th
+{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
 
 /****************************************************** Section A Propos Fin ********************************/
